charts/govcom/charts/rocketchat/ingress-rocketchat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocketchat-ingress
  namespace: ibtikarchart
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: rocketchat.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocketchat-rocketchat
            port:
              number: 3000
